cabal-version:          2.2
name:                   arbor-datadog
version:                0.1.0.0
synopsis:               Datadog client for Haskell.
description:            Datadog client for Haskell. Supports both the HTTP API and StatsD.
category:               Network
homepage:               https://github.com/arbor/arbor-datadog
author:                 Arbor Networks
maintainer:             mayhem@arbor.net
license:                MIT
license-file:           LICENSE
build-type:             Simple

source-repository head
  type: git
  location: git://github.com/arbor/arbor-datadog.git

common config
  default-language:     Haskell2010
  ghc-options:          -Wall
  other-extensions:     OverloadedStrings GeneralizedNewtypeDeriving TemplateHaskell FunctionalDependencies MultiParamTypeClasses FlexibleInstances

library
  import:               config
  exposed-modules:      Arbor.Network.StatsD
                        Arbor.Network.StatsD.Datadog
                        Arbor.Network.StatsD.Internal.Lens
                        Arbor.Network.StatsD.Monad
                        Arbor.Network.StatsD.Type
                        Arbor.Network.StatsD.Options
  hs-source-dirs:       src
  build-depends:        aeson
                      , auto-update
                      , base >=4.7 && <5
                      , buffer-builder
                      , bytestring
                      , dlist
                      , generic-lens
                      , lens
                      , mtl
                      , network <3
                      , optparse-applicative
                      , random
                      , resourcet
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , vector

test-suite datadog-api-test
  import:               config
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:
      Cabal
    , arbor-datadog
    , base
    , generic-lens
    , hspec
    , lens
    , network
    , resourcet
    , time
    , transformers
